--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
-<header class="site-header">
-  <div class="branding"><a href="/" style="color:#fff;text-decoration:none;">PRTD</a></div>
+<header class="site-header site-header-v2">
+  <div class="branding"><a class="brand-mark" href="/">PRTD</a></div>
   <nav class="nav-cats">
     <a href="/" class="<%= !currentCategory ? 'active' : '' %>">All</a>
     <a href="/?category=hotel" class="<%= currentCategory==='hotel' ? 'active' : '' %>">Hotels</a>
