--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,7 +6,7 @@
   <title><%= title %></title>
   <link rel="stylesheet" href="/css/styles.css" />
 </head>
-<body>
+<body class="<%= uiRefresh ? 'theme-refresh' : 'theme-legacy' %>">
   <%- include('partials/header') %>
   <main class="container">
     <%- body %>
